# notes

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  4k-tvs.md  Caddyfile  README.md  Rakefile  abc-code-metrics.md  accelerate-book.md  amazon-s3.md  apache.md  bgp.md  bloom-filters.md  book-data-intensive-applications.md  book-design-patterns-elements-of-reusable-oo-software.md  book-object-thinking.md  book-staff-engineer.md  broadband-techs.md  browser-events.md  cgi-and-fastcgi.md  cgi.md  cloud-init.md  cloudinary.md  code-review.md  communicating-sequential-processes.md  comp-sci-basics.md  connaissance.md  cors.md  curl-ssl.md  declarative-programming.md  diagnose-linux-disk-io.md  dtrace.md  emmet.md  floating-point-numbers.md  foo.py  foundation-sites.md  git-pre-push-generate-codeship-badge.sh  github-copilot.md  go-game.md  (+74 more)
R/: basics.md  environments.md  eoin_utils.R  ggplot.md  shiny.md  tidy-data-paper.md
accessability/: aria.md  basics.md  ember.md  my-checklist.md  nvda-notes.md  nvda.md  text-zoom.md  tools.md  voiceover.md  web-accessability.md
ai/: 0-learning-plan.md  000-learning-plan.md  3blue1brown-neural-networks.md  activation-functions.md  (+30 more)
python/code/examples/: dive_into_python.py  hello.py  pylintrc  pyproject.toml  python_cheatsheet.py  roman1.py  romantest.py  tensorflow.py
python/code/nutshell-book/: README.md  pyproject.toml
python/code/nutshell-book/nutshell_book/: bar.py  classes.py  foo.py  main.py
python/code/nutshell-book/nutshell_book/animal/dog/: poodle.py
python/code/poetry_new_output_example/: pyproject.toml
(+2335 files in other folders)
